GNOME Bugzilla – Bug 682855
Memory leak in grl_source_test_media_from_uri_sync()
Last modified: 2012-09-03 11:09:39 UTC
Created attachment 222614 [details] [review] proposed patch grl_source_test_media_from_uri_sync() leaks one GrlSource reference. See attached patch: Those calls of operation_set_finished() plug the leak, but not entirely sure if this are the proper places for fixing the issue.
commit 6016620b3d30d03cc4077cc876ad2afa4c565202 Author: Mathias Hasselmann <mathias@openismus.com> Date: Tue Aug 28 10:47:13 2012 +0200 Avoid leak in grl_source_get_media_from_uri() This fixes https://bugzilla.gnome.org/show_bug.cgi?id=682855 src/grl-source.c | 2 ++ 1 file changed, 2 insertions(+)