Avoid leak in grl_source_get_media_from_uri()

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=682855